--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,9 @@
 [project]
 name = "comfy-multigpu-loader"
-version = "0.1.2"
+version = "0.1.3"
 description = "ComfyUI custom nodes for sharding SD/SDXL/Flux checkpoints across multiple GPUs."
 readme = "README.md"
-license = { file = "LICENSE.md" }
+license = { file = "LICENSE" }
 dependencies = [
     "accelerate>=0.24",
     "torch>=2.0.0",
